--- a/Stellarium/for_translation_stellarium_po-stellarium-stellarium-pot--master_sv.po
+++ b/Stellarium/for_translation_stellarium_po-stellarium-stellarium-pot--master_sv.po
@@ -17,7 +17,7 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: stellarium@googlegroups.com\n"
 "POT-Creation-Date: 2025-01-23 01:29+0700\n"
-"PO-Revision-Date: 2025-01-31 10:43+0100\n"
+"PO-Revision-Date: 2025-01-31 11:48+0100\n"
 "Last-Translator: Daniel Nylander <github@danielnylander.se>\n"
 "Language-Team: Swedish (https://app.transifex.com/stellarium/teams/80998/sv/)\n"
 "Language: sv\n"
@@ -13902,7 +13902,7 @@ msgstr ""
 
 #: src/ui_scriptConsole.h:362
 msgid "Clear"
-msgstr ""
+msgstr "Töm"
 
 #: src/ui_scriptConsole.h:366
 msgid "Pre-process script using SSC preprocessor"
@@ -16346,7 +16346,7 @@ msgstr ""
 
 #: plugins/Oculars/src/ui_ocularDialog.h:1546
 msgid "Resolution y:"
-msgstr ""
+msgstr "Upplösning y:"
 
 #: plugins/Oculars/src/ui_ocularDialog.h:1547
 msgid "Binning x:"
@@ -16354,7 +16354,7 @@ msgstr ""
 
 #: plugins/Oculars/src/ui_ocularDialog.h:1548
 msgid "Resolution x:"
-msgstr ""
+msgstr "Upplösning x:"
 
 #: plugins/Oculars/src/ui_ocularDialog.h:1550
 msgid "Prism/CCD height:"
@@ -16390,7 +16390,7 @@ msgstr ""
 
 #: plugins/Oculars/src/ui_ocularDialog.h:1560
 msgid "Position angle:"
-msgstr ""
+msgstr "Positionsvinkel:"
 
 #: plugins/Oculars/src/ui_ocularDialog.h:1561
 msgid "Sensors"
