--- a/Stellarium/for_translation_stellarium_po-stellarium-remotecontrol-stellarium-remotecontrol-pot--master_sv.po
+++ b/Stellarium/for_translation_stellarium_po-stellarium-remotecontrol-stellarium-remotecontrol-pot--master_sv.po
@@ -15,7 +15,7 @@ msgstr ""
 "Project-Id-Version: stellarium-remotecontrol\n"
 "Report-Msgid-Bugs-To: stellarium@googlegroups.com\n"
 "POT-Creation-Date: 2025-01-03 20:26+0700\n"
-"PO-Revision-Date: 2025-01-31 10:11+0100\n"
+"PO-Revision-Date: 2025-01-31 11:56+0100\n"
 "Last-Translator: Daniel Nylander <github@danielnylander.se>\n"
 "Language-Team: Swedish (https://app.transifex.com/stellarium/teams/80998/"
 "sv/)\n"
@@ -27,19 +27,16 @@ msgstr ""
 "X-Generator: Poedit 3.5\n"
 
 #: plugins/RemoteControl/webroot/js/api/actions.js:60
-#, fuzzy
 msgid "Could not retrieve action list"
 msgstr "Kunde inte hämta åtgärdslistan"
 
 #: plugins/RemoteControl/webroot/js/api/actions.js:88
-#, fuzzy
 msgid "Action '%1' not accepted by server: "
-msgstr "Åtgärd '%1' accepteras inte av servern:"
+msgstr "Åtgärd '%1' accepteras inte av servern: "
 
 #: plugins/RemoteControl/webroot/js/api/actions.js:95
-#, fuzzy
 msgid "Error sending action '%1' to server: "
-msgstr "Fel vid sändning av åtgärd \"%1\" till servern:"
+msgstr "Fel vid sändning av åtgärd \"%1\" till servern: "
 
 #: plugins/RemoteControl/webroot/js/api/location.js:33
 #: plugins/RemoteControl/webroot/js/api/location.js:61
@@ -48,53 +45,43 @@ msgid "Error performing search"
 msgstr "Fel vid sökning"
 
 #: plugins/RemoteControl/webroot/js/api/location.js:125
-#, fuzzy
 msgid "Could not retrieve country list"
 msgstr "Landslistan kunde inte hämtas"
 
 #: plugins/RemoteControl/webroot/js/api/location.js:138
-#, fuzzy
 msgid "Could not retrieve planet list"
 msgstr "Planetlistan kunde inte hämtas"
 
 #: plugins/RemoteControl/webroot/js/api/properties.js:28
-#, fuzzy
 msgid "Could not retrieve property list"
-msgstr "Kunde inte hämta fastighetslistan"
+msgstr "Kunde inte hämta egenskapslistan"
 
 #: plugins/RemoteControl/webroot/js/api/properties.js:89
 #: plugins/RemoteControl/webroot/js/api/properties.js:110
-#, fuzzy
 msgid "Property '%1' not accepted by server: "
-msgstr "Egenskapen '%1' accepteras inte av servern:"
+msgstr "Egenskapen '%1' accepteras inte av servern: "
 
 #: plugins/RemoteControl/webroot/js/api/properties.js:96
-#, fuzzy
 msgid "Error sending property '%1' to server: "
-msgstr "Fel vid sändning av egenskapen '%1' till servern:"
+msgstr "Fel vid sändning av egenskapen '%1' till servern: "
 
 #: plugins/RemoteControl/webroot/js/api/remotecontrol.js:197
-#, fuzzy
 msgid "Error sending command to server: "
-msgstr "Fel vid sändning av kommando till server:"
+msgstr "Fel vid sändning av kommando till server: "
 
 #: plugins/RemoteControl/webroot/js/api/scripts.js:27
-#, fuzzy
 msgid "Could not retrieve script list"
 msgstr "Det gick inte att hämta skriptlistan"
 
 #: plugins/RemoteControl/webroot/js/api/search.js:35
-#, fuzzy
 msgid "querying"
-msgstr "ifrågasättande"
+msgstr "frågar"
 
 #: plugins/RemoteControl/webroot/js/api/search.js:44
-#, fuzzy
 msgid "Error (%1)"
 msgstr "Fel (%1)"
 
 #: plugins/RemoteControl/webroot/js/api/search.js:60
-#, fuzzy
 msgid "Error performing Simbad lookup"
 msgstr "Fel vid uppslagning i Simbad"
 
@@ -104,12 +91,10 @@ msgid "idle"
 msgstr "tomgång"
 
 #: plugins/RemoteControl/webroot/js/api/search.js:105
-#, fuzzy
 msgid "Error loading object types"
 msgstr "Fel vid laddning av objekttyper"
 
 #: plugins/RemoteControl/webroot/js/api/search.js:138
-#, fuzzy
 msgid "Error getting object list"
 msgstr "Fel vid hämtning av objektlista"
 
@@ -118,30 +103,25 @@ msgid "waiting"
 msgstr "väntar"
 
 #: plugins/RemoteControl/webroot/js/api/viewoptions.js:38
-#, fuzzy
 msgid "Could not retrieve projection list"
 msgstr "Det gick inte att hämta projektionslistan"
 
 #: plugins/RemoteControl/webroot/js/api/viewoptions.js:51
 #: plugins/RemoteControl/webroot/js/api/viewoptions.js:64
-#, fuzzy
 msgid "Could not retrieve landscape list"
 msgstr "Kunde inte hämta landskapslistan"
 
 #: plugins/RemoteControl/webroot/js/plugins/scenery3d.js:22
 #: plugins/RemoteControl/webroot/js/ui/scripts.js:76 index.html:745
 #: index.html:807 tablet7in.html:830 tablet7in.html:890
-#, fuzzy
 msgid "-none-"
-msgstr "ingen"
+msgstr "-ingen-"
 
 #: plugins/RemoteControl/webroot/js/plugins/scenery3d.js:28
-#, fuzzy
 msgid "(Currently loading: %1)"
 msgstr "(Aktuell laddning: %1)"
 
 #: plugins/RemoteControl/webroot/js/plugins/scenery3d.js:71
-#, fuzzy
 msgid "Could not retrieve Scenery3d list"
 msgstr "Det gick inte att hämta Scenery3d-listan"
 
@@ -156,216 +136,174 @@ msgid "off"
 msgstr "av"
 
 #: plugins/RemoteControl/webroot/js/ui/combobox.js:58
-#, fuzzy
 msgid "Show All Items"
-msgstr "Visa alla artiklar"
+msgstr "Visa alla objekt"
 
 #: plugins/RemoteControl/webroot/js/ui/combobox.js:124
-#, fuzzy
 msgid "Input did not match any item"
 msgstr "Inmatningen matchade inte någon post"
 
 #: plugins/RemoteControl/webroot/js/ui/search.js:294
-#, fuzzy
 msgid "No current selection"
 msgstr "Inget aktuellt val"
 
 #: index.html:7 tablet7in.html:7
-#, fuzzy
 msgid "Stellarium remote control plugin"
-msgstr "Stellarium fjärrkontroll plugin"
+msgstr "Stellarium fjärrkontrollsplugin"
 
 #: index.html:19 tablet7in.html:20
-#, fuzzy
 msgid "Please wait, loading"
-msgstr "Vänligen vänta, laddar"
+msgstr "Vänta, läser in"
 
 #: index.html:28 tablet7in.html:29
-#, fuzzy
 msgid "Stellarium remote control"
 msgstr "Stellarium fjärrkontroll"
 
 #: index.html:32 tablet7in.html:33
-#, fuzzy
 msgid "Main controls"
 msgstr "Huvudkontroller"
 
 #: index.html:35 tablet7in.html:40
-#, fuzzy
 msgid "DSO"
 msgstr "DSO"
 
 #: index.html:38
-#, fuzzy
 msgid "Actions and scripts"
 msgstr "Åtgärder och skript"
 
 #: index.html:41 tablet7in.html:47
-#, fuzzy
 msgid "Scenery3d"
-msgstr "Sceneri3d"
+msgstr "Scenery3d"
 
 #: index.html:79
 msgid "Pause"
 msgstr "Paus"
 
 #: index.html:84 tablet7in.html:185
-#, fuzzy
 msgid "Time jumps"
 msgstr "Tidshopp"
 
 #: index.html:88 tablet7in.html:189
-#, fuzzy
 msgid "Solar hour"
 msgstr "Soltimmar"
 
 #: index.html:89 tablet7in.html:190
-#, fuzzy
 msgid "Solar day"
 msgstr "Solens dag"
 
 #: index.html:90 tablet7in.html:191
-#, fuzzy
 msgid "Solar week"
 msgstr "Solvecka"
 
 #: index.html:92 tablet7in.html:193
-#, fuzzy
 msgid "Calendar year"
 msgstr "Kalenderår"
 
 #: index.html:93 tablet7in.html:194
-#, fuzzy
 msgid "10 Calendar years"
 msgstr "10 kalenderår"
 
 #: index.html:94 tablet7in.html:195
-#, fuzzy
 msgid "100 Calendar years"
 msgstr "100 kalenderår"
 
 #: index.html:97 tablet7in.html:198
-#, fuzzy
 msgid "Sidereal year"
 msgstr "Siderealt år"
 
 #: index.html:98 tablet7in.html:199
-#, fuzzy
 msgid "Sidereal century"
 msgstr "Siderealt århundrade"
 
 #: index.html:100 tablet7in.html:201
-#, fuzzy
 msgid "Synodic month"
 msgstr "Synodisk månad"
 
 #: index.html:101 tablet7in.html:202
-#, fuzzy
 msgid "Draconic month"
-msgstr "Draconic månad"
+msgstr "Drakonisk månad"
 
 #: index.html:102 tablet7in.html:203
-#, fuzzy
 msgid "Draconic year"
 msgstr "Drakoniskt år"
 
 #: index.html:105 tablet7in.html:206
-#, fuzzy
 msgid "Anomalistic month"
 msgstr "Anomalistisk månad"
 
 #: index.html:106 tablet7in.html:207
-#, fuzzy
 msgid "Anomalistic year"
 msgstr "Anomalistiskt år"
 
 #: index.html:107 tablet7in.html:208
-#, fuzzy
 msgid "Anomalistic century"
 msgstr "Anomalistiskt århundrade"
 
 #: index.html:109 tablet7in.html:210
-#, fuzzy
 msgid "Mean tropical month"
 msgstr "Genomsnittlig tropisk månad"
 
 #: index.html:110 tablet7in.html:211
-#, fuzzy
 msgid "Mean tropical year"
 msgstr "Genomsnittligt tropiskt år"
 
 #: index.html:111 tablet7in.html:212
-#, fuzzy
 msgid "Mean tropical century"
 msgstr "Medelvärde tropiskt århundrade"
 
 #: index.html:113 tablet7in.html:214
-#, fuzzy
 msgid "Tropical year"
 msgstr "Tropiskt år"
 
 #: index.html:114 tablet7in.html:215
-#, fuzzy
 msgid "Julian year"
-msgstr "Juliansk år"
+msgstr "Julianskt år"
 
 #: index.html:115 tablet7in.html:216
-#, fuzzy
 msgid "Julian century"
-msgstr "Julianska århundradet"
+msgstr "Julianskt århundrade"
 
 #: index.html:117 tablet7in.html:218
-#, fuzzy
 msgid "Gaussian year"
 msgstr "Gaussiskt år"
 
 #: index.html:129 tablet7in.html:103
-#, fuzzy
 msgid "View towards horizon at Azimuth"
 msgstr "Vy mot horisonten vid Azimut"
 
 #: index.html:150 tablet7in.html:125
-#, fuzzy
 msgid "Vertical View offset"
 msgstr "Vertikal vyförskjutning"
 
 #: index.html:219 tablet7in.html:236
-#, fuzzy
 msgid "Enter search term. Use TAB to navigate results."
 msgstr "Ange sökterm. Använd TAB för att navigera bland resultaten."
 
 #: index.html:220 tablet7in.html:237
-#, fuzzy
 msgid "Select and focus"
 msgstr "Välj och fokusera"
 
 #: index.html:245 tablet7in.html:265
-#, fuzzy
 msgid "Select current item"
 msgstr "Välj aktuellt objekt"
 
 #: index.html:249 tablet7in.html:269
-#, fuzzy
 msgid "Selection mode"
 msgstr "Val av läge"
 
 #: index.html:249 tablet7in.html:269
-#, fuzzy
 msgid "Center on object"
 msgstr "Centrera på objektet"
 
 #: index.html:249 tablet7in.html:269
-#, fuzzy
 msgid "Center and zoom to object"
 msgstr "Centrera och zooma till objektet"
 
 #: index.html:249 tablet7in.html:269
-#, fuzzy
 msgid "Just mark the object"
 msgstr "Markera bara objektet"
 
 #: index.html:251 tablet7in.html:271
-#, fuzzy
 msgid "Quick select"
 msgstr "Snabbval"
 
@@ -374,12 +312,10 @@ msgid "Earth"
 msgstr "Jorden"
 
 #: index.html:255 tablet7in.html:275
-#, fuzzy
 msgid "Pluto"
 msgstr "Pluto"
 
 #: index.html:261 tablet7in.html:304
-#, fuzzy
 msgid "Current selection"
 msgstr "Aktuellt val"
 
@@ -388,27 +324,22 @@ msgid "Milky Way brightness:"
 msgstr "Ljusstyrka för Vintergatan:"
 
 #: index.html:289 tablet7in.html:351
-#, fuzzy
 msgid "Dbl. stars"
 msgstr "Dubbla stjärnor"
 
 #: index.html:290 tablet7in.html:352
-#, fuzzy
 msgid "Var. stars"
 msgstr "Var. stjärnor"
 
 #: index.html:291 tablet7in.html:353
-#, fuzzy
 msgid "HIP"
 msgstr "HIP"
 
 #: index.html:294 tablet7in.html:357
-#, fuzzy
 msgid "Digitized Sky Survey"
 msgstr "Digitaliserad himmelsöversikt"
 
 #: index.html:295 tablet7in.html:358
-#, fuzzy
 msgid "HiPS Survey"
 msgstr "HiPS undersökning"
 
@@ -453,7 +384,6 @@ msgid "Scale Sun:"
 msgstr "Skala solen:"
 
 #: index.html:326 tablet7in.html:402
-#, fuzzy
 msgid "Scale Planets:"
 msgstr "Skala planeter:"
 
@@ -462,12 +392,10 @@ msgid "Scale minor bodies:"
 msgstr "Skala mindre kroppar:"
 
 #: index.html:332
-#, fuzzy
 msgid "Mark minor bodies:"
 msgstr "Markera mindre kroppar:"
 
 #: index.html:360 tablet7in.html:438
-#, fuzzy
 msgid "Bortle class:"
 msgstr "Bortle-klass:"
 
@@ -476,27 +404,22 @@ msgid "Extinction Coefficient:"
 msgstr "Absorptionskoefficient:"
 
 #: index.html:378 tablet7in.html:456
-#, fuzzy
 msgid "Only extinction/refraction, no blue skylight"
-msgstr "Endast extinktion/refraktion, inget blått takfönster"
+msgstr "Endast extinktion/refraktion, inget blått himmelsljus"
 
 #: index.html:378 tablet7in.html:457
-#, fuzzy
 msgid "Suppress scattering"
 msgstr "Undertrycka spridning"
 
 #: index.html:382 tablet7in.html:462
-#, fuzzy
 msgid "Shooting Stars"
 msgstr "Stjärnfall"
 
 #: index.html:383 tablet7in.html:463
-#, fuzzy
 msgid "ZHR:"
 msgstr "ZHR:"
 
 #: index.html:430 tablet7in.html:515
-#, fuzzy
 msgid ""
 "Instantaneous circles of earth´s axis on its motion around ecliptical "
 "poles. Displayed on Earth only."
@@ -505,83 +428,68 @@ msgstr ""
 "Visas endast på jorden."
 
 #: index.html:447 tablet7in.html:532
-#, fuzzy
 msgid "Center"
-msgstr "Center"
+msgstr "Centrera"
 
 #: index.html:463 tablet7in.html:550
-#, fuzzy
 msgid "Solstices"
 msgstr "Solstånden"
 
 #: index.html:464 tablet7in.html:551
-#, fuzzy
 msgid "Crossquarters"
 msgstr "Tvärkvarter"
 
 #: index.html:465 tablet7in.html:552
-#, fuzzy
 msgid "Major Standstill"
 msgstr "Större stillestånd"
 
 #: index.html:466 tablet7in.html:553
-#, fuzzy
 msgid "Minor Standstill"
 msgstr "Mindre stillestånd"
 
 #: index.html:470 tablet7in.html:558
-#, fuzzy
 msgid "Line width:"
 msgstr "Linjebredd:"
 
 #: index.html:480 tablet7in.html:568
-#, fuzzy
 msgid "Current Planet:"
-msgstr "Nuvarande planet:"
+msgstr "Aktuell planet:"
 
 #: index.html:520 tablet7in.html:608
 msgid "Catalogue of Reflection Nebulae (Van den Bergh, 1966)"
 msgstr "Katalog över reflektionsnebulosor (Van den Bergh, 1966)"
 
 #: index.html:567 tablet7in.html:626
-#, fuzzy
 msgid ""
 "Catalogue of southern stars embedded in nebulosity (van den Bergh+, 1975)"
 msgstr ""
 "Katalog över sydliga stjärnor inbäddade i nebulositet (van den Bergh+, 1975)"
 
 #: index.html:605
-#, fuzzy
 msgid "Objects without identifier"
 msgstr "Objekt utan identifierare"
 
 #: index.html:623
-#, fuzzy
 msgid "Open Star clusters"
 msgstr "Öppna stjärnkluster"
 
 #: index.html:624 tablet7in.html:694
-#, fuzzy
 msgid "Globular Star clusters"
 msgstr "Klotformiga stjärnhopar"
 
 #: index.html:630 tablet7in.html:700
-#, fuzzy
 msgid "Bright Nebulae"
 msgstr "Ljusa nebulosor"
 
 #: index.html:631 tablet7in.html:701
-#, fuzzy
 msgid "Dark Nebulae"
 msgstr "Mörka nebulosor"
 
 #: index.html:632 tablet7in.html:702
-#, fuzzy
 msgid "Planetary Nebulae"
 msgstr "Planetariska nebulosor"
 
 #: index.html:642 tablet7in.html:712
-#, fuzzy
 msgid "Labels and markers"
 msgstr "Etiketter och markörer"
 
@@ -598,37 +506,30 @@ msgid "Show landscape labels"
 msgstr "Visa landskapsetiketter"
 
 #: index.html:683 tablet7in.html:754
-#, fuzzy
 msgid "Show illumination"
 msgstr "Visa belysning"
 
 #: index.html:688 tablet7in.html:760
-#, fuzzy
 msgid "Current landscape"
-msgstr "Nuvarande landskap"
+msgstr "Aktuellt landskap"
 
 #: index.html:699 tablet7in.html:772
-#, fuzzy
 msgid "Label constellations with font size"
 msgstr "Märk konstellationer med teckenstorlek"
 
 #: index.html:703 tablet7in.html:776
-#, fuzzy
 msgid "Show lines with thickness"
 msgstr "Visa linjer med tjocklek"
 
 #: index.html:707 tablet7in.html:780
-#, fuzzy
 msgid "Label asterisms with font size"
 msgstr "Märk asterismer med teckenstorlek"
 
 #: index.html:711 tablet7in.html:784
-#, fuzzy
 msgid "Show asterisms with thickness"
 msgstr "Visa asterismer med tjocklek"
 
 #: index.html:715 tablet7in.html:788
-#, fuzzy
 msgid "Show ray helpers with thickness"
 msgstr "Visar strålhjälpmedel med tjocklek"
 
@@ -641,52 +542,42 @@ msgid "Show boundaries with thickness"
 msgstr "Visa gränser med tjocklek"
 
 #: index.html:728 tablet7in.html:801
-#, fuzzy
 msgid "Constellation selection isolated"
 msgstr "Val av konstellation isolerad"
 
 #: index.html:732 tablet7in.html:805
-#, fuzzy
 msgid "Current sky culture"
-msgstr "Nuvarande himmelskultur"
+msgstr "Aktuell himmelskultur"
 
 #: index.html:745 tablet7in.html:830
-#, fuzzy
 msgid "Active script:"
-msgstr "Aktivt manus:"
+msgstr "Aktivt skript:"
 
 #: index.html:746 tablet7in.html:831
-#, fuzzy
 msgid "Run selected script"
 msgstr "Kör valt skript"
 
 #: index.html:746 tablet7in.html:831
-#, fuzzy
 msgid "Stop current script"
 msgstr "Stoppa aktuellt skript"
 
 #: index.html:751 tablet7in.html:43 tablet7in.html:815
-#, fuzzy
 msgid "Actions"
 msgstr "Åtgärder"
 
 #: index.html:755 tablet7in.html:819
-#, fuzzy
 msgid "Run/toggle action"
 msgstr "Kör/växla åtgärd"
 
 #: index.html:766 tablet7in.html:854
-#, fuzzy
 msgid "Planet map"
 msgstr "Planetens karta"
 
 #: index.html:767 tablet7in.html:855
-#, fuzzy
 msgid "Planet map pointer"
 msgstr "Pekare för planetkarta"
 
 #: index.html:771 tablet7in.html:859
-#, fuzzy
 msgid "Type to search location"
 msgstr "Skriv för att söka plats"
 
@@ -695,58 +586,47 @@ msgid "Interaction"
 msgstr "Interaktioner"
 
 #: index.html:806 tablet7in.html:889
-#, fuzzy
 msgid "Current scene:"
 msgstr "Aktuell scen:"
 
 #: index.html:809 tablet7in.html:892
-#, fuzzy
 msgid "View controls"
 msgstr "Visa kontroller"
 
 #: index.html:815 tablet7in.html:898
-#, fuzzy
 msgid "Movement controls"
-msgstr "Rörelsekontroll"
+msgstr "Rörelsekontroller"
 
 #: index.html:827 tablet7in.html:910
-#, fuzzy
 msgid "Torchlight"
-msgstr "Fackeltåg"
+msgstr "Fackelsken"
 
 #: index.html:834 tablet7in.html:917
-#, fuzzy
 msgid "Scene selection"
 msgstr "Val av scen"
 
 #: index.html:838 tablet7in.html:921
-#, fuzzy
 msgid "Load selected scene"
-msgstr "Ladda vald scen"
+msgstr "Läs in vald scen"
 
 #: index.html:864 tablet7in.html:948
-#, fuzzy
 msgid "No response from server"
 msgstr "Inget svar från servern"
 
 #: index.html:865 tablet7in.html:949
-#, fuzzy
 msgid "No response from server for %1 seconds. Is Stellarium still running?"
 msgstr ""
-"Inget svar från servern på %1 seconds. Är Stellarium fortfarande igång?"
+"Inget svar från servern på %1 sekunder. Är Stellarium fortfarande igång?"
 
 #: tablet7in.html:34
-#, fuzzy
 msgid "Time Jump"
 msgstr "Tidshopp"
 
 #: tablet7in.html:39
-#, fuzzy
 msgid "Grids"
-msgstr "Galler"
+msgstr "Rutnät"
 
 #: tablet7in.html:99
-#, fuzzy
 msgid "Up/Left"
 msgstr "Upp/vänster"
 
@@ -755,7 +635,6 @@ msgid "Up"
 msgstr "Upp"
 
 #: tablet7in.html:99
-#, fuzzy
 msgid "Up/Right"
 msgstr "Upp/höger"
 
@@ -764,12 +643,10 @@ msgid "Left"
 msgstr "Vänster"
 
 #: tablet7in.html:99
-#, fuzzy
 msgid "Focus on selected object"
 msgstr "Fokusera på valt objekt"
 
 #: tablet7in.html:99
-#, fuzzy
 msgid "Focus on selection"
 msgstr "Fokus på urval"
 
@@ -778,7 +655,6 @@ msgid "Right"
 msgstr "Höger"
 
 #: tablet7in.html:99
-#, fuzzy
 msgid "Down/Left"
 msgstr "Nedåt/vänster"
 
@@ -787,7 +663,6 @@ msgid "Down"
 msgstr "Ner"
 
 #: tablet7in.html:99
-#, fuzzy
 msgid "Down/Right"
 msgstr "Nedåt/höger"
 
@@ -828,12 +703,10 @@ msgid "Orion Nebula"
 msgstr "Orionnebulusan"
 
 #: tablet7in.html:285
-#, fuzzy
 msgid "Eta Carinae Nebula"
 msgstr "Nebulosan Eta Carinae"
 
 #: tablet7in.html:286
-#, fuzzy
 msgid "47 Tucanae Cluster"
 msgstr "47 Tucanae-hopen"
 
@@ -890,16 +763,13 @@ msgid "Favorites"
 msgstr "Favoriter"
 
 #: tablet7in.html:841
-#, fuzzy
 msgid "Show 1"
-msgstr "Visa %1"
+msgstr "Visa 1"
 
 #: tablet7in.html:842
-#, fuzzy
 msgid "Remove Labels and Images"
 msgstr "Ta bort etiketter och bilder"
 
 #: tablet7in.html:842
-#, fuzzy
 msgid "Cleanup Screen"
-msgstr "Rensningsskärm"
+msgstr "Rensa skärm"
