--- a/Cacti/cacti-reportit-sv.po
+++ b/Cacti/cacti-reportit-sv.po
@@ -8,13 +8,14 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: developers@cacti.net\n"
 "POT-Creation-Date: 2024-09-25 20:00-0400\n"
-"PO-Revision-Date: 2025-03-14 01:03+0800\n"
+"PO-Revision-Date: 2025-03-18 09:32+0100\n"
 "Last-Translator: Daniel Nylander <github@danielnylander.se>\n"
-"Language-Team: \n"
+"Language-Team: Swedish <http://translate.cacti.net/projects/cacti/reportit/sv/>\n"
 "Language: sv_SE\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=n != 1;\n"
 "X-Generator: Poedit 3.5\n"
 
 #: include/global_arrays.php:27 include/global_arrays.php:34
@@ -208,7 +209,7 @@ msgstr "Senaste 28 dagarna"
 
 #: include/global_arrays.php:104 lib/const_reports.php:86
 msgid "Current Month"
-msgstr "Nuvarande månad"
+msgstr "Aktuell månad"
 
 #: include/global_arrays.php:105 lib/const_reports.php:87
 msgid "Last Month"
@@ -236,7 +237,7 @@ msgstr "Senaste 6 månaderna"
 
 #: include/global_arrays.php:111 lib/const_reports.php:93
 msgid "Current Year"
-msgstr "Nuvarande år"
+msgstr "Aktuellt år"
 
 #: include/global_arrays.php:112 lib/const_reports.php:94
 msgid "Last Year"
@@ -1983,7 +1984,7 @@ msgstr "Automatisk e-postutskick"
 
 #: setup.php:506
 msgid "If enabled scheduled reports can be emailed automatically to a list of recipients.<br> This feature requires a configured version of the 'Settings Plugin'."
-msgstr "Om det här alternativet är aktiverat kan schemalagda rapporter skickas automatiskt via e-post till en lista med mottagare.<br> Den här funktionen kräver en konfigurerad version av \"Inställningar Plugin\"."
+msgstr "Om det här alternativet är aktiverat kan schemalagda rapporter skickas automatiskt via e-post till en lista med mottagare.<br> Den här funktionen kräver en konfigurerad version av \"Inställningstillägg\"."
 
 #: setup.php:511
 msgid "Auto Exporting"
@@ -2132,7 +2133,7 @@ msgstr "Redigera variabler"
 
 #: templates.php:692
 msgid "No templates"
-msgstr "Enhetsmallar: "
+msgstr "Inga mallar"
 
 #: templates.php:857
 msgid "Maximum has to be greater than minimum."
@@ -2489,7 +2490,7 @@ msgstr "Arkiv"
 
 #: view.php:702
 msgid "Current"
-msgstr "Nuvarande"
+msgstr "Aktuell"
 
 #: view.php:761
 msgid "Title"
