--- a/Cacti/cacti-routerconfigs-sv.po
+++ b/Cacti/cacti-routerconfigs-sv.po
@@ -8,13 +8,14 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: developers@cacti.net\n"
 "POT-Creation-Date: 2023-12-12 22:41-0600\n"
-"PO-Revision-Date: 2025-03-14 00:55+0800\n"
+"PO-Revision-Date: 2025-03-18 09:33+0100\n"
 "Last-Translator: Daniel Nylander <github@danielnylander.se>\n"
-"Language-Team: \n"
+"Language-Team: Swedish <http://translate.cacti.net/projects/cacti/routerconfigs/sv/>\n"
 "Language: sv_SE\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=n != 1;\n"
 "X-Generator: Poedit 3.5\n"
 
 #: include/arrays.php:39 include/arrays.php:44 include/arrays.php:50
@@ -72,24 +73,24 @@ msgstr "Månadsvis"
 #: include/arrays.php:72
 #, php-format
 msgid "%d Month"
-msgstr "%d Månad"
+msgstr "%d månad"
 
 #: include/arrays.php:73 include/arrays.php:74 include/arrays.php:75
 #: include/arrays.php:76
 #, php-format
 msgid "%d Months"
-msgstr "%d Månader"
+msgstr "%d månader"
 
 #: include/arrays.php:77
 #, php-format
 msgid "%d Year"
-msgstr "%d År"
+msgstr "%d år"
 
 #: include/arrays.php:78 include/arrays.php:79 include/arrays.php:80
 #: include/arrays.php:81
 #, php-format
 msgid "%d Years"
-msgstr "%d År"
+msgstr "%d år"
 
 #: include/arrays.php:85
 msgid "Never"
@@ -252,7 +253,7 @@ msgstr "Namn på den här enheten (används för att spara config och SVN om ing
 
 #: include/arrays.php:179 router-devices.php:667
 msgid "IP Address"
-msgstr "IP adress"
+msgstr "IP-adress"
 
 #: include/arrays.php:180
 msgid "This is the IP Address used to communicate with the device."
@@ -994,7 +995,7 @@ msgstr "IP-adressen för den här enheten"
 
 #: router-devices.php:673
 msgid "Next Backup"
-msgstr "Nästa Backup"
+msgstr "Nästa säkerhetskopia"
 
 #: router-devices.php:678
 msgid "Date Backup"
@@ -1069,7 +1070,7 @@ msgstr "Säkerhetskopior (%s)"
 
 #: router-devices.php:812
 msgid "Current"
-msgstr "Nuvarande"
+msgstr "Aktuell"
 
 #: router-devices.php:827
 msgid "No Router Devices Found"
@@ -1143,7 +1144,7 @@ msgstr "Router-enheter"
 
 #: setup.php:452 setup.php:487 setup.php:515
 msgid "(edit)"
-msgstr "(Redigera)"
+msgstr "(redigera)"
 
 #: setup.php:459 setup.php:494 setup.php:522
 msgid "(actions)"
