--- a/Cacti/cacti-syslog-sv.po
+++ b/Cacti/cacti-syslog-sv.po
@@ -8,13 +8,14 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: developers@cacti.net\n"
 "POT-Creation-Date: 2025-03-07 14:31-0500\n"
-"PO-Revision-Date: 2025-03-14 00:58+0800\n"
+"PO-Revision-Date: 2025-03-18 09:35+0100\n"
 "Last-Translator: Daniel Nylander <github@danielnylander.se>\n"
-"Language-Team: \n"
+"Language-Team: Swedish <http://translate.cacti.net/projects/cacti/syslog/sv/>\n"
 "Language: sv_SE\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=n != 1;\n"
 "X-Generator: Poedit 3.5\n"
 
 #: functions.php:72
@@ -149,7 +150,7 @@ msgstr "Händelsevarning - %s"
 
 #: functions.php:1548
 msgid ", Count:"
-msgstr ", Count:"
+msgstr ", Antal:"
 
 #: functions.php:2091
 msgid "Host"
@@ -170,7 +171,7 @@ msgstr "Syslog 2.0 kräver en fullständig ominstallation.  Vänligen avinstalle
 
 #: setup.php:862
 msgid "What upgrade/install type do you wish to use"
-msgstr "Vilken typ av uppgradering/installation vill du använda?"
+msgstr "Vilken typ av uppgradering/installation vill du använda"
 
 #: setup.php:863
 msgid "When you have very large tables, performing a Truncate will be much quicker.  If you are concerned about archive data, you can choose either Inline, which will freeze your browser for the period of this upgrade, or background, which will create a background process to bring your old syslog data from a backup table to the new syslog format.  Again this process can take several hours."
@@ -239,7 +240,7 @@ msgstr "Välj det antal partitioner per dag som du vill skapa."
 #: setup.php:918 setup.php:919 setup.php:920 setup.php:921 setup.php:922
 #, php-format
 msgid "%d Per Day"
-msgstr "%d per dag"
+msgstr "%d per dygn"
 
 #: setup.php:927 setup.php:1015
 msgid "Upgrade"
@@ -368,7 +369,7 @@ msgstr "För tröskelvärdesbaserade varningar, vilket är det högsta antal som
 #: setup.php:1117
 #, php-format
 msgid "%d Records"
-msgstr "%d Rekord"
+msgstr "%d poster"
 
 #: setup.php:1121
 msgid "Command for Opening Tickets"
@@ -461,40 +462,40 @@ msgstr "Obestämd tid"
 #: setup.php:1296 setup.php:1315 syslog.php:608 syslog_alerts.php:409
 #, php-format
 msgid "%d Day"
-msgstr "%d Dag"
+msgstr "%d dygn"
 
 #: setup.php:1297 setup.php:1298 setup.php:1299 setup.php:1300 setup.php:1301
 #: setup.php:1316 setup.php:1317 setup.php:1318 setup.php:1319 setup.php:1320
 #: syslog_alerts.php:410
 #, php-format
 msgid "%d Days"
-msgstr "%d Dagar"
+msgstr "%d dygn"
 
 #: setup.php:1302 setup.php:1321 syslog_alerts.php:411
 #, php-format
 msgid "%d Week"
-msgstr "%d Vecka"
+msgstr "%d vecka"
 
 #: setup.php:1303 setup.php:1322 syslog_alerts.php:412
 #, php-format
 msgid "%d Weeks"
-msgstr "%d Veckor"
+msgstr "%d veckor"
 
 #: setup.php:1304 setup.php:1323
 #, php-format
 msgid "%d Month"
-msgstr "%d Månad"
+msgstr "%d månad"
 
 #: setup.php:1305 setup.php:1306 setup.php:1307 setup.php:1308 setup.php:1309
 #: setup.php:1324 setup.php:1325 setup.php:1326 setup.php:1327 setup.php:1328
 #, php-format
 msgid "%d Months"
-msgstr "%d Månader"
+msgstr "%d månader"
 
 #: setup.php:1310 setup.php:1329
 #, php-format
 msgid "%d Year"
-msgstr "%d År"
+msgstr "%d år"
 
 #: setup.php:1333 syslog_reports.php:769
 msgid "Never"
@@ -503,7 +504,7 @@ msgstr "Aldrig"
 #: setup.php:1334 syslog.php:599
 #, php-format
 msgid "%d Minute"
-msgstr "%d Minut"
+msgstr "%d minut"
 
 #: setup.php:1335 setup.php:1336 setup.php:1337 syslog.php:600 syslog.php:601
 #: syslog.php:602 syslog.php:603 syslog_alerts.php:396 syslog_alerts.php:397
@@ -511,7 +512,7 @@ msgstr "%d Minut"
 #: syslog_alerts.php:401
 #, php-format
 msgid "%d Minutes"
-msgstr "%d Protokoll"
+msgstr "%d minuter"
 
 #: setup.php:1341 syslog.php:1630 syslog.php:1697 syslog.php:1714
 msgid "Notice"
@@ -926,7 +927,7 @@ msgstr "Systemkritiskt"
 
 #: syslog.php:1625
 msgid "Error++"
-msgstr "Status (ok/fel): "
+msgstr "Fel++"
 
 #: syslog.php:1626 syslog.php:1695
 msgid "Error"
@@ -1059,7 +1060,7 @@ msgstr "Ej inställt"
 
 #: syslog_alerts.php:391
 msgid "1 Minute"
-msgstr "1 Minut"
+msgstr "1 minut"
 
 #: syslog_alerts.php:413
 msgid "1 Month"
