--- a/Cacti/cacti-audit-sv.po
+++ b/Cacti/cacti-audit-sv.po
@@ -8,13 +8,14 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: developers@cacti.net\n"
 "POT-Creation-Date: 2024-06-08 09:09-0400\n"
-"PO-Revision-Date: 2025-03-14 00:27+0800\n"
+"PO-Revision-Date: 2025-03-18 09:00+0100\n"
 "Last-Translator: Daniel Nylander <github@danielnylander.se>\n"
-"Language-Team: \n"
+"Language-Team: Swedish <http://translate.cacti.net/projects/cacti/audit/sv/>\n"
 "Language: sv_SE\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=n != 1;\n"
 "X-Generator: Poedit 3.5\n"
 
 #: audit.php:54 audit.php:77
@@ -61,7 +62,7 @@ msgstr "Granskningsloggen rensas av %s"
 #: audit.php:179
 msgctxt "Column Header used for CSV log export. Ensure that you do NOT(!) remove one of the commas. The output needs to be CSV compliant."
 msgid "page, user_id, username, action, ip_address, user_agent, event_time, post"
-msgstr "sida, användar-id, användarnamn, åtgärd, ip-adress, user_agent, event_time, post"
+msgstr "sida, user_id, användarnamn, åtgärd, ip_adress, user_agent, event_time, post"
 
 #: audit.php:266
 msgid "Audit Log"
@@ -165,7 +166,7 @@ msgstr "Webbläsarens typ av sökande."
 
 #: audit.php:466
 msgid "IP Address"
-msgstr "IP adress"
+msgstr "IP-adress"
 
 #: audit.php:469
 msgid "The IP Address of the requester."
@@ -214,27 +215,27 @@ msgstr "Ingen gräns"
 #: setup.php:249
 #, php-format
 msgid "%d Weeks"
-msgstr "%d Veckor"
+msgstr "%d veckor"
 
 #: setup.php:250
 #, php-format
 msgid "%d Month"
-msgstr "%d Månad"
+msgstr "%d månad"
 
 #: setup.php:251 setup.php:252 setup.php:253 setup.php:254
 #, php-format
 msgid "%d Months"
-msgstr "%d Månader"
+msgstr "%d månader"
 
 #: setup.php:255
 #, php-format
 msgid "%d Year"
-msgstr "%d År"
+msgstr "%d år"
 
 #: setup.php:256 setup.php:257
 #, php-format
 msgid "%d Years"
-msgstr "%d År"
+msgstr "%d år"
 
 #: setup.php:261
 msgid "System Administration"
