--- a/Cacti/cacti-cycle-sv.po
+++ b/Cacti/cacti-cycle-sv.po
@@ -8,13 +8,14 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: developers@cacti.net\n"
 "POT-Creation-Date: 2024-06-08 09:29-0400\n"
-"PO-Revision-Date: 2025-03-14 00:29+0800\n"
+"PO-Revision-Date: 2025-03-18 09:02+0100\n"
 "Last-Translator: Daniel Nylander <github@danielnylander.se>\n"
-"Language-Team: \n"
+"Language-Team: Swedish <http://translate.cacti.net/projects/cacti/cycle/sv/>\n"
 "Language: sv_SE\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=n != 1;\n"
 "X-Generator: Poedit 3.5\n"
 
 #: cycle.php:120
@@ -51,7 +52,7 @@ msgstr "Föregående"
 
 #: cycle.php:229
 msgid "Stop"
-msgstr "Stopp"
+msgstr "Stoppa"
 
 #: cycle.php:229
 msgid "Stop Cycling"
@@ -63,7 +64,7 @@ msgstr "Fortsätt cykla"
 
 #: cycle.php:230
 msgid "Start"
-msgstr "Start"
+msgstr "Starta"
 
 #: cycle.php:231
 msgid "Cycle to Next Graphs"
@@ -127,7 +128,7 @@ msgstr "Välj trädblad till bildskärm"
 
 #: cycle.php:307
 msgid "All Levels"
-msgstr "Alla Nivåer"
+msgstr "Alla nivåer"
 
 #: cycle.php:308
 msgid "Top Level"
@@ -172,7 +173,7 @@ msgstr "%d kolumner"
 
 #: setup.php:34
 msgid "Plugin -> Cycle Graphs"
-msgstr "Plugin -> Cykeldiagram"
+msgstr "Tillägg -> Cykelgrafer"
 
 #: setup.php:141 setup.php:142 setup.php:242 setup.php:244
 msgid "Cycle"
@@ -188,7 +189,7 @@ msgstr "Detta är tiden i sekunder innan nästa graf visas."
 
 #: setup.php:158
 msgid "Graph Timespan"
-msgstr "Graf Timespan"
+msgstr "Grafens tidsintervall"
 
 #: setup.php:159
 msgid "This is the default timespan that will be displayed on the page."
