--- a/Cacti/cacti-gexport-sv.po
+++ b/Cacti/cacti-gexport-sv.po
@@ -8,15 +8,15 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: developers@cacti.net\n"
 "POT-Creation-Date: 2020-12-12 22:15-0500\n"
-"PO-Revision-Date: 2024-06-07 23:16-0400\n"
-"Last-Translator: \n"
-"Language-Team: \n"
+"PO-Revision-Date: 2025-03-18 09:07+0100\n"
+"Last-Translator: Daniel Nylander <github@danielnylander.se>\n"
+"Language-Team: Swedish <http://translate.cacti.net/projects/cacti/gexport/sv/>\n"
 "Language: sv_SE\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Poedit 3.4.4\n"
+"Plural-Forms: nplurals=2; plural=n != 1;\n"
+"X-Generator: Poedit 3.5\n"
 
 #: functions.php:312
 msgid "Success"
@@ -100,7 +100,7 @@ msgstr "Timeout väntar på daemon-anslutning"
 
 #: functions.php:334 functions.php:405
 msgid "Unknown error "
-msgstr "Okänt fel"
+msgstr "Okänt fel "
 
 #: functions.php:377
 msgid "Operation was successful"
@@ -184,7 +184,7 @@ msgstr "Värdnyckel ej verifierbar"
 
 #: functions.php:397
 msgid "Connection failed"
-msgstr "% 1"
+msgstr "Anslutning misslyckades"
 
 #: functions.php:398
 msgid "Disconnected by application"
@@ -333,7 +333,7 @@ msgstr "Sök"
 
 #: gexport.php:423
 msgid "Select Site(s)"
-msgstr "Välj webbplats (er)"
+msgstr "Välj plats(er)"
 
 #: gexport.php:425
 msgid "Sites Selected"
@@ -591,7 +591,7 @@ msgstr "Export Command Arguments"
 
 #: setup.php:313
 msgid "Arguments to use with non-local export methods. rsync should use "
-msgstr "Argument att använda med icke-lokala exportmetoder. rsync ska använda"
+msgstr "Argument att använda med icke-lokala exportmetoder. rsync ska använda "
 
 #: setup.php:325
 msgid "Theme"
@@ -611,7 +611,7 @@ msgstr "Välj vilken presentation du vill ha för de html-genererade sidorna. Om
 
 #: setup.php:339 setup.php:442
 msgid "Site"
-msgstr "Webbplats"
+msgstr "Plats"
 
 #: setup.php:340 setup.php:423
 msgid "Tree"
@@ -646,7 +646,7 @@ msgstr "Varje omröstningscykel"
 #: setup.php:376
 #, php-format
 msgid "Every %d Polling Cycles"
-msgstr "Varje% d pollningscykler"
+msgstr "Varje %d pollningscykler"
 
 #: setup.php:380
 msgid "Hourly at specified minutes"
@@ -690,7 +690,7 @@ msgstr "Expand Devices / Sites"
 
 #: setup.php:432
 msgid "This setting determines if Tree Devices and Site Templates and Devices will be expanded or not.  If set to expanded, each host will have a sub-folder containing either Graph Templates or Data Query items."
-msgstr "Den här inställningen avgör om träningsenheter och sidmallar och enheter kommer att utvidgas eller inte. Om den är expanderad, kommer varje värd att ha en undermapp som innehåller antingen grafmallar eller dataquery-objekt."
+msgstr "Den här inställningen avgör om trädenheter och sidmallar och enheter kommer att utvidgas eller inte. Om den är expanderad, kommer varje värd att ha en undermapp som innehåller antingen grafmallar eller dataquery-objekt."
 
 #: setup.php:437
 msgid "Off"
@@ -702,7 +702,7 @@ msgstr "På"
 
 #: setup.php:443
 msgid "The Site for Cacti Graphs to be Exported from."
-msgstr "Webbplatsen för kaktifigurer ska exporteras från."
+msgstr "Platsen för cacti-grafer ska exporteras från."
 
 #: setup.php:450
 msgid "Graph Thumbnail Width"
@@ -786,7 +786,7 @@ msgstr "Local Scratch Directory"
 
 #: setup.php:525
 msgid "This is the directory that Cacti will temporarily store output prior to sending to the remote site via the transfer method.  The contents of this directory will be deleted after the data is transferred."
-msgstr "Det här är katalogen att kaktuserna tillfälligt kommer att lagra produktionen innan de skickas till fjärrsidan via överföringsmetoden. Innehållet i den här katalogen kommer att raderas efter att data har överförts."
+msgstr "Det här är katalogen som Cacti tillfälligt kommer att lagra produktionen innan de skickas till fjärrsidan via överföringsmetoden. Innehållet i den här katalogen kommer att raderas efter att data har överförts."
 
 #: setup.php:532
 msgid "Remote Options"
