--- a/Cacti/cacti-maint-sv.po
+++ b/Cacti/cacti-maint-sv.po
@@ -8,13 +8,14 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: developers@cacti.net\n"
 "POT-Creation-Date: 2022-06-18 08:24-0400\n"
-"PO-Revision-Date: 2025-03-14 00:48+0800\n"
+"PO-Revision-Date: 2025-03-18 09:25+0100\n"
 "Last-Translator: Daniel Nylander <github@danielnylander.se>\n"
-"Language-Team: \n"
+"Language-Team: Swedish <http://translate.cacti.net/projects/cacti/maint/sv/>\n"
 "Language: sv_SE\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=n != 1;\n"
 "X-Generator: Poedit 3.5\n"
 
 #: maint.php:37
@@ -43,7 +44,7 @@ msgstr "Återkommande"
 
 #: maint.php:53
 msgid "Not Defined"
-msgstr "Ej definierad"
+msgstr "Inte definierad"
 
 #: maint.php:54
 msgid "Every Day"
@@ -63,7 +64,7 @@ msgstr "Ja"
 
 #: maint.php:68
 msgid "General"
-msgstr "Allmän"
+msgstr "Allmänt"
 
 #: maint.php:72 maint.php:1083 maint.php:1245
 msgid "Devices"
@@ -397,7 +398,7 @@ msgstr "Systemadministratör"
 
 #: setup.php:64
 msgid "(edit)"
-msgstr "(Redigera)"
+msgstr "(redigera)"
 
 #: setup.php:65
 msgid "(actions)"
