--- a/Cacti/cacti-monitor-sv.po
+++ b/Cacti/cacti-monitor-sv.po
@@ -3,13 +3,14 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: developers@cacti.net\n"
 "POT-Creation-Date: 2023-12-11 22:02-0600\n"
-"PO-Revision-Date: 2025-03-14 00:53+0800\n"
+"PO-Revision-Date: 2025-03-18 09:31+0100\n"
 "Last-Translator: Daniel Nylander <github@danielnylander.se>\n"
-"Language-Team: \n"
+"Language-Team: Swedish <http://translate.cacti.net/projects/cacti/monitor/sv/>\n"
 "Language: sv_SE\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=n != 1;\n"
 "X-Generator: Poedit 3.5\n"
 
 #: monitor.php:36 poller_monitor.php:402 setup.php:409
@@ -51,7 +52,7 @@ msgstr "Uppe"
 
 #: monitor.php:61
 msgid "Triggered"
-msgstr "Utlöst: "
+msgstr "Utlöst"
 
 #: monitor.php:62
 msgid "Triggered (Muted/Acked)"
@@ -132,7 +133,7 @@ msgstr "Träd"
 
 #: monitor.php:95 monitor.php:2082
 msgid "Site"
-msgstr "Webbplats"
+msgstr "Plats"
 
 #: monitor.php:96 setup.php:542
 msgid "Device Template"
@@ -172,7 +173,7 @@ msgstr "100 tecken"
 
 #: monitor.php:216
 msgid "New Dashboard"
-msgstr "Ny instrumentpanel"
+msgstr "Ny dashboard"
 
 #: monitor.php:219
 msgid "Dashboard"
@@ -347,11 +348,11 @@ msgstr "Enheter utan träd"
 
 #: monitor.php:568
 msgid "All Sites"
-msgstr "Alla webbplatser"
+msgstr "Alla platser"
 
 #: monitor.php:569 monitor.php:1348
 msgid "Non-Site Devices"
-msgstr "Enheter utanför webbplatsen"
+msgstr "Enheter utanför platsen"
 
 #: monitor.php:575
 msgid "Sites"
@@ -415,7 +416,7 @@ msgstr "Instrumentpanelen '%s' kunde inte sparas!"
 
 #: monitor.php:1287 monitor.php:1626
 msgid "Non-Site Device"
-msgstr "Enhet utanför webbplatsen"
+msgstr "Enhet utanför platsen"
 
 #: monitor.php:1600
 msgid "Root Branch"
@@ -477,7 +478,7 @@ msgstr "Enhet:"
 
 #: monitor.php:1985
 msgid "Site:"
-msgstr "Plats"
+msgstr "Plats:"
 
 #: monitor.php:1989 monitor.php:2037
 msgid "Location:"
@@ -600,11 +601,11 @@ msgstr "Beskrivning: "
 
 #: poller_monitor.php:341
 msgid "Hostname: "
-msgstr "Värdnamn:"
+msgstr "Värdnamn: "
 
 #: poller_monitor.php:456 poller_monitor.php:458 poller_monitor.php:459
 msgid "Cacti Monitor Plugin Ping Threshold Notification"
-msgstr "Cacti Monitor Plugin Ping Tröskelvärde Notifiering"
+msgstr "Avisering från Cacti-övervakningstillägget tröskelvärde för ping"
 
 #: poller_monitor.php:461 poller_monitor.php:463
 msgid "The following report will identify Devices that have eclipsed their ping latency thresholds.  You are receiving this report since you are subscribed to a Device associated with the Cacti system located at the following URL below."
@@ -630,7 +631,7 @@ msgstr "Följande enheter har överskridit sin tröskel för varningsmeddelande.
 #: poller_monitor.php:491 poller_monitor.php:497 poller_monitor.php:540
 #: poller_monitor.php:546
 msgid "Current Ping"
-msgstr "Nuvarande Ping"
+msgstr "Aktuell ping"
 
 #: poller_monitor.php:529 poller_monitor.php:531
 msgid "The following Devices have breached their Warning Notification Threshold."
@@ -672,17 +673,17 @@ msgstr "Tillsvidare"
 #: setup.php:418
 #, php-format
 msgid "%d Month"
-msgstr "%d Månad"
+msgstr "%d månad"
 
 #: setup.php:419 setup.php:420 setup.php:421 setup.php:422
 #, php-format
 msgid "%d Months"
-msgstr "%d Månader"
+msgstr "%d månader"
 
 #: setup.php:423
 #, php-format
 msgid "%d Year"
-msgstr "%d År"
+msgstr "%d år"
 
 #: setup.php:436
 msgid "Normal User"
@@ -810,7 +811,7 @@ msgstr "Varning Latency Notification"
 
 #: setup.php:576
 msgid "If a Device has a Round Trip Ping Latency above the Warning Threshold and above the Criticality below, subscribing emails to the Device will receive an email notification.  Select 'Disabled' to Disable.  The Thold Plugin is required to enable this feature."
-msgstr "Om en enhet har en Ping-latency för tur och retur som är högre än tröskelvärdet för Warning och högre än tröskelvärdet för Criticality nedan, kommer de som prenumererar på e-post till enheten att få ett e-postmeddelande.  Välj \"Disabled\" för att inaktivera.  Thold Plugin krävs för att aktivera den här funktionen."
+msgstr "Om en enhet har en Ping-latency för tur och retur som är högre än tröskelvärdet för Warning och högre än tröskelvärdet för Criticality nedan, kommer de som prenumererar på e-post till enheten att få ett e-postmeddelande.  Välj \"Disabled\" för att inaktivera.  Thold-tillägget krävs för att aktivera den här funktionen."
 
 #: setup.php:582
 msgid "Alert Latency Notification"
@@ -818,7 +819,7 @@ msgstr "Avisering om latenstid"
 
 #: setup.php:583
 msgid "If a Device has a Round Trip Ping Latency above the Alert Threshold and above the Criticality below, subscribing emails to the Device will receive an email notification.  Select 'Disabled' to Disable.  The Thold Plugin is required to enable this feature."
-msgstr "Om en enhet har en Ping-latency för tur och retur som är högre än tröskelvärdet för varning och högre än kriticitetsvärdet nedan, kommer de som prenumererar på e-post till enheten att få ett e-postmeddelande.  Välj \"Disabled\" för att inaktivera.  Thold Plugin krävs för att aktivera den här funktionen."
+msgstr "Om en enhet har en Ping-latency för tur och retur som är högre än tröskelvärdet för varning och högre än kriticitetsvärdet nedan, kommer de som prenumererar på e-post till enheten att få ett e-postmeddelande.  Välj \"Disabled\" för att inaktivera.  Thold-tillägget krävs för att aktivera den här funktionen."
 
 #: setup.php:589
 msgid "How Often to Resend Emails"
@@ -884,7 +885,7 @@ msgstr "E-post meddelandetext"
 
 #: setup.php:629
 msgid "Enter an Email body to include in the Reboot Notification message.  Currently, the only supported replacement tag accepted is &#060;DETAILS&#062;"
-msgstr "Ange en e-posttext som ska ingå i meddelandet om omstart.  För närvarande är den enda ersättningstagg som stöds och accepteras <DETAILS>"
+msgstr "Ange en e-posttext som ska ingå i meddelandet om omstart.  För närvarande är den enda ersättningstagg som stöds och accepteras &#060;DETAILS&#062;"
 
 #: setup.php:633
 msgid "<h1>Monitor Reboot Notification</h1><p>The following Device's were Rebooted.  See details below for additional information.</p><br><DETAILS>"
@@ -936,7 +937,7 @@ msgstr "Ändra inte"
 #: setup.php:727
 #, php-format
 msgid "%d Percent Above Average"
-msgstr "%d Procent över genomsnittet"
+msgstr "%d procent över genomsnittet"
 
 #: setup.php:736
 msgid "Device Monitoring Settings"
@@ -956,7 +957,7 @@ msgstr "Enhetskritikalitet"
 
 #: setup.php:755
 msgid "What is the Criticality of this Device."
-msgstr "Vad är det som är kritiskt med den här enheten?"
+msgstr "Vad är det som är kritiskt med den här enheten."
 
 #: setup.php:762
 msgid "Ping Warning Threshold"
@@ -964,7 +965,7 @@ msgstr "Tröskelvärde för pingvarning"
 
 #: setup.php:763
 msgid "If the round-trip latency via any of the predefined Cacti ping methods raises above this threshold, log a warning or send email based upon the Devices Criticality and Monitor setting.  The unit is in milliseconds.  Setting to 0 disables. The Thold Plugin is required to leverage this functionality."
-msgstr "Om latensen tur och retur via någon av de fördefinierade Cacti-pingmetoderna överstiger detta tröskelvärde, loggas en varning eller skickas ett e-postmeddelande beroende på inställningen Devices Criticality och Monitor.  Enheten är i millisekunder.  Inställning till 0 inaktiverar. Thold Plugin krävs för att utnyttja den här funktionen."
+msgstr "Om latensen tur och retur via någon av de fördefinierade Cacti-pingmetoderna överstiger detta tröskelvärde, loggas en varning eller skickas ett e-postmeddelande beroende på inställningen Devices Criticality och Monitor.  Enheten är i millisekunder.  Inställning till 0 inaktiverar. Thold-tillägget krävs för att utnyttja den här funktionen."
 
 #: setup.php:767 setup.php:777
 msgid "milliseconds"
@@ -976,7 +977,7 @@ msgstr "Tröskelvärde för ping-varning"
 
 #: setup.php:773
 msgid "If the round-trip latency via any of the predefined Cacti ping methods raises above this threshold, log an alert or send an email based upon the Devices Criticality and Monitor setting.  The unit is in milliseconds.  Setting to 0 disables. The Thold Plugin is required to leverage this functionality."
-msgstr "Om latensen tur och retur via någon av de fördefinierade Cacti-pingmetoderna överstiger detta tröskelvärde, loggas en varning eller skickas ett e-postmeddelande baserat på inställningen Devices Criticality och Monitor.  Enheten är i millisekunder.  Inställning till 0 inaktiverar. Thold Plugin krävs för att utnyttja den här funktionen."
+msgstr "Om latensen tur och retur via någon av de fördefinierade Cacti-pingmetoderna överstiger detta tröskelvärde, loggas en varning eller skickas ett e-postmeddelande baserat på inställningen Devices Criticality och Monitor.  Enheten är i millisekunder.  Inställning till 0 inaktiverar. Thold-tillägget krävs för att utnyttja den här funktionen."
 
 #: setup.php:782
 msgid "Re-Baseline Warning"
