--- a/Cacti/cacti-npc-sv.po
+++ b/Cacti/cacti-npc-sv.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: developers@cacti.net\n"
 "POT-Creation-Date: 2024-06-08 08:54-0400\n"
-"PO-Revision-Date: 2024-06-08 09:01-0400\n"
-"Last-Translator: \n"
+"PO-Revision-Date: 2025-03-18 09:31+0100\n"
+"Last-Translator: Daniel Nylander <github@danielnylander.se>\n"
 "Language-Team: \n"
 "Language: sv_SE\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 3.4.4\n"
+"X-Generator: Poedit 3.5\n"
 
 #: controllers/cacti.php:150 setup.php:169 setup.php:237
 msgid "None"
