--- a/Cacti/cacti-servcheck-sv.po
+++ b/Cacti/cacti-servcheck-sv.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: developers@cacti.net\n"
 "POT-Creation-Date: 2024-04-20 09:41-0400\n"
-"PO-Revision-Date: 2025-03-14 01:04+0800\n"
+"PO-Revision-Date: 2025-03-18 09:34+0100\n"
 "Last-Translator: Daniel Nylander <github@danielnylander.se>\n"
 "Language-Team: Swedish <http://translate.cacti.net/projects/cacti/servcheck/sv/>\n"
 "Language: sv_SE\n"
@@ -539,7 +539,7 @@ msgstr "Tidpunkt för anmälan"
 
 #: includes/arrays.php:444
 msgid "How Often to Test"
-msgstr "Hur ofta ska testet utföras?"
+msgstr "Hur ofta ska testet utföras"
 
 #: includes/arrays.php:448
 msgid "Test each poller cycle or less"
@@ -551,7 +551,7 @@ msgstr "Utlösare"
 
 #: includes/arrays.php:456
 msgid "How many poller cycles must be down before it will send an alert. After an alert is sent, in order for a 'Site Recovering' Email to be send, it must also be up this number of poller cycles."
-msgstr "Hur många pollercykler som måste vara nere innan en varning skickas. Efter att en varning har skickats måste den också vara uppe det här antalet pollercykler för att ett e-postmeddelande om att \"webbplatsen återhämtar sig\" ska kunna skickas."
+msgstr "Hur många pollercykler som måste vara nere innan en varning skickas. Efter att en varning har skickats måste den också vara uppe det här antalet pollercykler för att ett e-postmeddelande om att \"platsen återhämtar sig\" ska kunna skickas."
 
 #: includes/arrays.php:460
 msgid "Time Out"
@@ -1273,7 +1273,7 @@ msgstr "Statistik (OK/problem)"
 
 #: servcheck_test.php:1043
 msgid "Trigerred"
-msgstr "Trigerred"
+msgstr "Utlöst"
 
 #: servcheck_test.php:1066 servcheck_test.php:1286
 msgid "Checks"
