--- a/Cacti/cacti-thold-sv.po
+++ b/Cacti/cacti-thold-sv.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: developers@cacti.net\n"
 "POT-Creation-Date: 2024-04-20 16:30-0400\n"
-"PO-Revision-Date: 2025-03-14 01:11+0800\n"
+"PO-Revision-Date: 2025-03-18 09:37+0100\n"
 "Last-Translator: Daniel Nylander <github@danielnylander.se>\n"
-"Language-Team: none\n"
+"Language-Team: Swedish <http://translate.cacti.net/projects/cacti/thold/sv/>\n"
 "Language: sv_SE\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Plural-Forms: nplurals=2; plural=n != 1;\n"
 "X-Generator: Poedit 3.5\n"
 
 #: includes/arrays.php:26
@@ -324,7 +324,7 @@ msgstr "%d minut"
 #: includes/arrays.php:616
 #, php-format
 msgid "%d Minutes"
-msgstr "Var %d minut"
+msgstr "%d minuter"
 
 #: includes/arrays.php:327 includes/arrays.php:358 includes/arrays.php:404
 #: includes/arrays.php:425
@@ -389,7 +389,7 @@ msgstr "Varje %d opinionsundersökning"
 #: includes/arrays.php:462 includes/arrays.php:481
 #, php-format
 msgid "%d Polling"
-msgstr "%d Pollning"
+msgstr "%d pollning"
 
 #: includes/arrays.php:463 includes/arrays.php:464 includes/arrays.php:465
 #: includes/arrays.php:466 includes/arrays.php:467 includes/arrays.php:468
@@ -403,7 +403,7 @@ msgstr "%d Pollning"
 #: includes/arrays.php:494 includes/arrays.php:495 includes/arrays.php:496
 #, php-format
 msgid "%d Pollings"
-msgstr "%d Opinionsundersökningar"
+msgstr "%d pollningar"
 
 #: includes/arrays.php:503
 msgid "High / Low"
@@ -551,12 +551,12 @@ msgstr "1 siffra"
 #: includes/arrays.php:578 includes/arrays.php:579 includes/arrays.php:580
 #, php-format
 msgid "%d Digits"
-msgstr "%d Dagar"
+msgstr "%d siffror"
 
 #: includes/arrays.php:597
 #, php-format
 msgid "> %d Devices"
-msgstr "> %d Enheter"
+msgstr "> %d enheter"
 
 #: includes/arrays.php:601
 #, php-format
@@ -622,7 +622,7 @@ msgstr "Åtgärder"
 
 #: includes/settings.php:43
 msgid "(edit)"
-msgstr "(Redigera)"
+msgstr "(redigera)"
 
 #: includes/settings.php:50
 msgid "(save)"
@@ -630,7 +630,7 @@ msgstr "Spara"
 
 #: includes/settings.php:57
 msgid "(add)"
-msgstr "(Lägg till)"
+msgstr "(lägg till)"
 
 #: includes/settings.php:84
 msgid "Threshold Logs"
@@ -777,13 +777,13 @@ msgstr "Grundinställningsinställningar"
 #: includes/settings.php:357
 #, php-format
 msgid "%d Polling Interval"
-msgstr "%d Pollningsintervall"
+msgstr "%d pollningsintervall"
 
 #: includes/settings.php:358 includes/settings.php:359
 #: includes/settings.php:360 includes/settings.php:361
 #, php-format
 msgid "%d Polling Intervals"
-msgstr "%d Pollningsintervall"
+msgstr "%d pollningsintervall"
 
 #: includes/settings.php:383
 msgid "Alerting/Thold"
@@ -955,7 +955,7 @@ msgstr "Det maximala antalet samtidiga processer som ska hanteras av Threshold D
 
 #: includes/settings.php:508
 msgid "1 Process"
-msgstr "1 Process"
+msgstr "1 process"
 
 #: includes/settings.php:509 includes/settings.php:510
 #: includes/settings.php:511 includes/settings.php:512
@@ -964,7 +964,7 @@ msgstr "1 Process"
 #: includes/settings.php:517
 #, php-format
 msgid "%d Processes"
-msgstr "%d Processer"
+msgstr "%d processer"
 
 #: includes/settings.php:522
 msgid "Logging"
@@ -1108,7 +1108,7 @@ msgstr "SNMP-meddelanden"
 
 #: includes/settings.php:645
 msgid "Threshold status messages (informs/traps) will be sent to SNMP notification receivers. This includes Alerts, Warnings and Restoration traps per default. Note: This feature requires the Cacti SNMPAgent plugin."
-msgstr "Tröskelstatusmeddelanden (information / fällor) kommer att skickas till SNMP-meddelandemottagare. Detta inkluderar varningar, varningar och återställningsfält per standard. Obs! Den här funktionen kräver plugin för Cacti SNMPAgent."
+msgstr "Tröskelstatusmeddelanden (information / fällor) kommer att skickas till SNMP-meddelandemottagare. Detta inkluderar varningar, varningar och återställningsfält per standard. Obs! Den här funktionen kräver tillägget för Cacti SNMPAgent."
 
 #: includes/settings.php:650
 msgid "Disable Warning Notifications"
@@ -1434,7 +1434,7 @@ msgstr "Disassociera Notifieringslista (er)"
 #: notify_lists.php:647
 #, php-format
 msgid "%s Threshold(s)"
-msgstr "%s Tröskel (ar)"
+msgstr "%s Tröskelvärde(n)"
 
 #: notify_lists.php:653
 #, php-format
@@ -1553,7 +1553,7 @@ msgstr "Sök"
 #: notify_lists.php:995 notify_lists.php:1183 notify_lists.php:1359
 #: thold.php:649 thold_graph.php:138 thold_graph.php:1144 thold_graph.php:1575
 msgid "Site"
-msgstr "Webbplats"
+msgstr "Plats"
 
 #: notify_lists.php:1000 notify_lists.php:1018 notify_lists.php:1227
 #: notify_lists.php:1242 notify_lists.php:1364 notify_lists.php:1587
@@ -2908,7 +2908,7 @@ msgstr "Alla användare valda"
 
 #: thold_functions.php:82
 msgid "< 1 Minute"
-msgstr "1 Minut"
+msgstr "1 minut"
 
 #: thold_functions.php:84
 msgid "Since Created"
@@ -3216,7 +3216,7 @@ msgstr "Kommentar hittades inte"
 
 #: thold_graph.php:682
 msgid "Ack History"
-msgstr "Ack Historia"
+msgstr "Ack Historik"
 
 #: thold_graph.php:692
 msgid "No name set"
@@ -3552,22 +3552,22 @@ msgstr "Ange ett evigt ID för denna Thold-mall."
 #: thold_templates.php:2039
 #, php-format
 msgid "%d Months, %d Days, %d Hours, %d Minutes, %d Seconds (Average)"
-msgstr "%d månader, %d dagar, %d timmar, %d minuter, %d sekunder (genomsnitt)"
+msgstr "%d månader, %d dygn, %d timmar, %d minuter, %d sekunder (genomsnitt)"
 
 #: thold_templates.php:2041
 #, php-format
 msgid "%d Months, %d Days, %d Hours, %d Minutes, %d Seconds"
-msgstr "%d månader, %d dagar, %d timmar, %d minuter, %d sekunder"
+msgstr "%d månader, %d dygn, %d timmar, %d minuter, %d sekunder"
 
 #: thold_templates.php:2045
 #, php-format
 msgid "%d Days, %d Hours, %d Minutes, %d Seconds (Average)"
-msgstr "%d Dagar, %d Timmar, %d Minuter, %d Sekunder (genomsnitt)"
+msgstr "%d dygn, %d timmar, %d minuter, %d sekunder (genomsnitt)"
 
 #: thold_templates.php:2047
 #, php-format
 msgid "%d Days, %d Hours, %d Minutes, %d Seconds"
-msgstr "%d Dagar, %d Timmar, %d Minuter, %d Sekunder"
+msgstr "%d dygn, %d timmar, %d minuter, %d sekunder"
 
 #: thold_templates.php:2051
 #, php-format
@@ -3582,17 +3582,17 @@ msgstr "%d timmar, %d minuter, %d sekunder"
 #: thold_templates.php:2057
 #, php-format
 msgid "%d Minutes, %d Seconds (Average)"
-msgstr "%d Minuter, %d Sekunder (genomsnitt)"
+msgstr "%d minuter, %d sekunder (genomsnitt)"
 
 #: thold_templates.php:2059
 #, php-format
 msgid "%d Minutes, %d Seconds"
-msgstr "%d Minuter, %d Sekunder"
+msgstr "%d minuter, %d sekunder"
 
 #: thold_templates.php:2063
 #, php-format
 msgid "%d Seconds (Average)"
-msgstr "%d Sekunder (genomsnitt)"
+msgstr "%d sekunder (genomsnitt)"
 
 #: thold_templates.php:2065
 #, php-format
