--- a/Cacti/cacti-webseer-sv.po
+++ b/Cacti/cacti-webseer-sv.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: developers@cacti.net\n"
 "POT-Creation-Date: 2023-02-05 13:24-0500\n"
-"PO-Revision-Date: 2025-03-14 01:00+0800\n"
+"PO-Revision-Date: 2025-03-18 09:37+0100\n"
 "Last-Translator: Daniel Nylander <github@danielnylander.se>\n"
-"Language-Team: \n"
+"Language-Team: Swedish <http://translate.cacti.net/projects/cacti/webseer/sv/>\n"
 "Language: sv_SE\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Plural-Forms: nplurals=2; plural=n != 1;\n"
 "X-Generator: Poedit 3.5\n"
 
 #: includes/arrays.php:78 includes/arrays.php:324 includes/arrays.php:419
@@ -736,7 +736,7 @@ msgstr "Webseer-servrar"
 
 #: webseer_servers.php:741
 msgid "Triggered"
-msgstr "Utlöst: "
+msgstr "Utlöst"
 
 #: webseer_servers.php:828
 msgid "Webseer Server History"
