--- a/Cacti/cacti-wmi-sv.po
+++ b/Cacti/cacti-wmi-sv.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: developers@cacti.net\n"
 "POT-Creation-Date: 2022-06-18 08:26-0400\n"
-"PO-Revision-Date: 2025-03-14 01:02+0800\n"
+"PO-Revision-Date: 2025-03-18 09:38+0100\n"
 "Last-Translator: Daniel Nylander <github@danielnylander.se>\n"
-"Language-Team: \n"
+"Language-Team: Swedish <http://translate.cacti.net/projects/cacti/wmi/sv/>\n"
 "Language: sv_SE\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Plural-Forms: nplurals=2; plural=n != 1;\n"
 "X-Generator: Poedit 3.5\n"
 
 #: functions.php:29 wmi_queries.php:280 wmi_queries.php:409 wmi_tools.php:356
@@ -110,7 +110,7 @@ msgstr "Välj ett konto som ska användas vid autentisering via WMI"
 
 #: setup.php:425
 msgid "1 Process"
-msgstr "1 Process"
+msgstr "1 process"
 
 #: setup.php:426 setup.php:427 setup.php:428 setup.php:429 setup.php:430
 #: setup.php:431 setup.php:432 setup.php:433 setup.php:434 setup.php:435
@@ -118,7 +118,7 @@ msgstr "1 Process"
 #: setup.php:441 setup.php:442
 #, php-format
 msgid "%d Processes"
-msgstr "%d Processer"
+msgstr "%d processer"
 
 #: setup.php:447
 msgid "WMI Settings"
@@ -130,7 +130,7 @@ msgstr "Aktivera WMI-datainsamling"
 
 #: setup.php:452
 msgid "Check this box, if you want the WMI Plugin to query Windows devices."
-msgstr "Markera den här rutan om du vill att WMI Plugin ska ställa frågor om Windows-enheter."
+msgstr "Markera den här rutan om du vill att WMI-tillägget ska ställa frågor om Windows-enheter."
 
 #: setup.php:457
 msgid "Concurrent Processes"
@@ -518,7 +518,7 @@ msgstr "Mer klassinformation @Microsoft"
 
 #: wmi_tools.php:354
 msgid "Run"
-msgstr "Aktivera"
+msgstr "Kör"
 
 #: wmi_tools.php:354
 msgid "Run the WMI Query against the Device"
