--- a/ScummVM/hebrew-adventure-kyra-sv.po
+++ b/ScummVM/hebrew-adventure-kyra-sv.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: Swedish (Hebrew Adventure)\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2025-03-21 19:03+0000\n"
-"PO-Revision-Date: 2025-03-21 20:39+0100\n"
+"PO-Revision-Date: 2025-03-24 06:54+0100\n"
 "Last-Translator: Daniel Nylander <github@danielnylander.se>\n"
 "Language-Team: Swedish <https://translations.scummvm.org/projects/hebrew-"
 "adventure/kyra/sv/>\n"
@@ -851,7 +851,7 @@ msgid "139"
 msgstr "139"
 
 msgid "SEALED.WSA"
-msgstr "FÖRSÄLJNING.WSA"
+msgstr "SEALED.WSA"
 
 msgid "140"
 msgstr "140"
@@ -905,7 +905,7 @@ msgid "148"
 msgstr "148"
 
 msgid "BEHIND.WSA"
-msgstr "BAKOM.WSA"
+msgstr "BEHIND.WSA"
 
 msgid "JESTTALK.WSA"
 msgstr "JESTTALK.WSA"
@@ -1143,7 +1143,7 @@ msgid "187"
 msgstr "187"
 
 msgid "WAKEN.WSA"
-msgstr "VAKEN.WSA"
+msgstr "WAKEN.WSA"
 
 msgid "188"
 msgstr "188"
@@ -1194,7 +1194,7 @@ msgid "196"
 msgstr "196"
 
 msgid "LAUNDRY.WSA"
-msgstr "TVÄTTSTUGA.WSA"
+msgstr "LAUNDRY.WSA"
 
 msgid "197"
 msgstr "197"
@@ -1595,7 +1595,7 @@ msgid "261"
 msgstr "261"
 
 msgid "CARPET.WSA"
-msgstr "HELTÄCKNINGSMATTA.WSA"
+msgstr "CARPET.WSA"
 
 msgid "262"
 msgstr "262"
@@ -2225,7 +2225,7 @@ msgid "366"
 msgstr "366"
 
 msgid "ADVICE.WSA"
-msgstr "RÅDGIVNING.WSA"
+msgstr "ADVICE.WSA"
 
 msgid "All that's left is that thin rope..."
 msgstr "Allt som finns kvar är det tunna repet..."
@@ -3284,7 +3284,7 @@ msgid "541"
 msgstr "541"
 
 msgid "GRANDPA.WSA"
-msgstr "MORFAR.WSA"
+msgstr "GRANDPA.WSA"
 
 msgid "Grandfather, can you hear me?"
 msgstr "Farfar, kan du höra mig?"
@@ -3800,7 +3800,7 @@ msgid "627"
 msgstr "627"
 
 msgid "UPSTAIRS.WSA"
-msgstr "ÖVRE VÅNINGSPLAN.WSA"
+msgstr "UPSTAIRS.WSA"
 
 msgid "Castle entry hall"
 msgstr "Slottets entréhall"
@@ -4752,7 +4752,7 @@ msgid "785"
 msgstr "785"
 
 msgid "EYES.WSA"
-msgstr "ÖGON.WSA"
+msgstr "EYES.WSA"
 
 msgid "786"
 msgstr "786"
